SERVER-79607 ShardRegistry shutdown should not wait indefinitely on outstanding network requests

(cherry picked from commit cce7e48a789e973cb647639f4d482d64c1c87b23)